--- a/banner/banner.conf
+++ b/banner/banner.conf
@@ -8,6 +8,6 @@ color='#FFFF00'><b> ★ [ ༆Hʸᵖᵉʳ᭄W̺͆E̺͆L̺͆C̺͆O̺͆M̺͆E̺͆ T
 <font color="#FF0000">❖Ƭʜᴇ No Torrent</font><br> <font 
 color="#FFB1C2">❖Ƭʜᴇ No Bokep </font><br> <font color="#FFFFFF">❖Ƭʜᴇ No 
 Hacking</font><br> <font color="#00FF00">❖Ƭʜᴇ No Mining</font><br> <font 
-color="#00FF00">▄︻デN̷E̷T̷W̷O̷R̷K̷ ̷T̷W̷E̷A̷K̷E̷R̷══━一 </font><br> <font 
+color="#00FF00">▄══━一 </font><br> <font 
 color="#00FFE2">क═══════क⊹⊱✫⊰⊹क═══════क</font><br></font><br><font 
-color="FFFF00">@networktweakerop</font><br>
+color="FFFF00"></font><br>
